// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OrganisationUnits > matches snapshot with custom description 1`] = `
<DocumentFragment>
  <div
    class="organisation-units sds--text-field "
  >
    <label>
      Unit name
    </label>
    <div
      class="input-field first"
    >
      <div
        class="inner-input-field"
      >
        <input
          class="sds--text-field--input"
          type="text"
          value=""
        />
        <div
          class="input-field-link input-field-delete"
        >
          <a
            href="#"
          >
            <svg
              class="bin-svg"
              height="22.5"
              id="bin"
              viewBox="0 0 22.5 22.5"
              width="22.5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M.8 3.8h21m-8.3-3H9c-.4 0-.8.2-1.1.4-.2.3-.4.7-.4 1v1.5H15V2.2c0-.4-.2-.8-.4-1.1-.3-.2-.7-.3-1.1-.3zM9 16.5V9m4.5 7.5V9m4.6 11.4c0 .4-.2.7-.5 1s-.6.4-1 .4H5.9c-.4 0-.7-.1-1-.4s-.4-.6-.5-1L3 3.8h16.5l-1.4 16.6z"
                fill="none"
                stroke="#000"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
    <div
      class="input-field "
    >
      <div
        class="inner-input-field"
      >
        <input
          class="sds--text-field--input"
          type="text"
          value=""
        />
        <div
          class="input-field-link input-field-delete"
        >
          <a
            href="#"
          >
            <svg
              class="bin-svg"
              height="22.5"
              id="bin"
              viewBox="0 0 22.5 22.5"
              width="22.5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M.8 3.8h21m-8.3-3H9c-.4 0-.8.2-1.1.4-.2.3-.4.7-.4 1v1.5H15V2.2c0-.4-.2-.8-.4-1.1-.3-.2-.7-.3-1.1-.3zM9 16.5V9m4.5 7.5V9m4.6 11.4c0 .4-.2.7-.5 1s-.6.4-1 .4H5.9c-.4 0-.7-.1-1-.4s-.4-.6-.5-1L3 3.8h16.5l-1.4 16.6z"
                fill="none"
                stroke="#000"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
    <a
      class="add-unit"
      href="#"
    >
      + Add unit
    </a>
  </div>
</DocumentFragment>
`;

exports[`OrganisationUnits > matches snapshot with custom title 1`] = `
<DocumentFragment>
  <div
    class="organisation-units sds--text-field "
  >
    <label>
      Unit name
    </label>
    <div
      class="input-field first"
    >
      <div
        class="inner-input-field"
      >
        <input
          class="sds--text-field--input"
          type="text"
          value=""
        />
        <div
          class="input-field-link input-field-delete"
        >
          <a
            href="#"
          >
            <svg
              class="bin-svg"
              height="22.5"
              id="bin"
              viewBox="0 0 22.5 22.5"
              width="22.5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M.8 3.8h21m-8.3-3H9c-.4 0-.8.2-1.1.4-.2.3-.4.7-.4 1v1.5H15V2.2c0-.4-.2-.8-.4-1.1-.3-.2-.7-.3-1.1-.3zM9 16.5V9m4.5 7.5V9m4.6 11.4c0 .4-.2.7-.5 1s-.6.4-1 .4H5.9c-.4 0-.7-.1-1-.4s-.4-.6-.5-1L3 3.8h16.5l-1.4 16.6z"
                fill="none"
                stroke="#000"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
    <div
      class="input-field "
    >
      <div
        class="inner-input-field"
      >
        <input
          class="sds--text-field--input"
          type="text"
          value=""
        />
        <div
          class="input-field-link input-field-delete"
        >
          <a
            href="#"
          >
            <svg
              class="bin-svg"
              height="22.5"
              id="bin"
              viewBox="0 0 22.5 22.5"
              width="22.5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M.8 3.8h21m-8.3-3H9c-.4 0-.8.2-1.1.4-.2.3-.4.7-.4 1v1.5H15V2.2c0-.4-.2-.8-.4-1.1-.3-.2-.7-.3-1.1-.3zM9 16.5V9m4.5 7.5V9m4.6 11.4c0 .4-.2.7-.5 1s-.6.4-1 .4H5.9c-.4 0-.7-.1-1-.4s-.4-.6-.5-1L3 3.8h16.5l-1.4 16.6z"
                fill="none"
                stroke="#000"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
    <a
      class="add-unit"
      href="#"
    >
      + Add unit
    </a>
  </div>
</DocumentFragment>
`;

exports[`OrganisationUnits > matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="organisation-units sds--text-field "
  >
    <label>
      Unit name
    </label>
    <div
      class="input-field first"
    >
      <div
        class="inner-input-field"
      >
        <input
          class="sds--text-field--input"
          type="text"
          value=""
        />
        <div
          class="input-field-link input-field-delete"
        >
          <a
            href="#"
          >
            <svg
              class="bin-svg"
              height="22.5"
              id="bin"
              viewBox="0 0 22.5 22.5"
              width="22.5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M.8 3.8h21m-8.3-3H9c-.4 0-.8.2-1.1.4-.2.3-.4.7-.4 1v1.5H15V2.2c0-.4-.2-.8-.4-1.1-.3-.2-.7-.3-1.1-.3zM9 16.5V9m4.5 7.5V9m4.6 11.4c0 .4-.2.7-.5 1s-.6.4-1 .4H5.9c-.4 0-.7-.1-1-.4s-.4-.6-.5-1L3 3.8h16.5l-1.4 16.6z"
                fill="none"
                stroke="#000"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
    <div
      class="input-field "
    >
      <div
        class="inner-input-field"
      >
        <input
          class="sds--text-field--input"
          type="text"
          value=""
        />
        <div
          class="input-field-link input-field-delete"
        >
          <a
            href="#"
          >
            <svg
              class="bin-svg"
              height="22.5"
              id="bin"
              viewBox="0 0 22.5 22.5"
              width="22.5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M.8 3.8h21m-8.3-3H9c-.4 0-.8.2-1.1.4-.2.3-.4.7-.4 1v1.5H15V2.2c0-.4-.2-.8-.4-1.1-.3-.2-.7-.3-1.1-.3zM9 16.5V9m4.5 7.5V9m4.6 11.4c0 .4-.2.7-.5 1s-.6.4-1 .4H5.9c-.4 0-.7-.1-1-.4s-.4-.6-.5-1L3 3.8h16.5l-1.4 16.6z"
                fill="none"
                stroke="#000"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
    <a
      class="add-unit"
      href="#"
    >
      + Add unit
    </a>
  </div>
</DocumentFragment>
`;

exports[`OrganisationUnits matches snapshot with custom description 1`] = `
<DocumentFragment>
  <div
    class="organisation-units sds--text-field "
  >
    <label>
      Unit name
    </label>
    <div
      class="input-field first"
    >
      <div
        class="inner-input-field"
      >
        <input
          class="sds--text-field--input"
          type="text"
          value=""
        />
        <div
          class="input-field-link input-field-delete"
        >
          <a
            href="#"
          >
            <svg>
              bin.svg
            </svg>
          </a>
        </div>
      </div>
    </div>
    <div
      class="input-field "
    >
      <div
        class="inner-input-field"
      >
        <input
          class="sds--text-field--input"
          type="text"
          value=""
        />
        <div
          class="input-field-link input-field-delete"
        >
          <a
            href="#"
          >
            <svg>
              bin.svg
            </svg>
          </a>
        </div>
      </div>
    </div>
    <a
      class="add-unit"
      href="#"
    >
      + Add unit
    </a>
  </div>
</DocumentFragment>
`;

exports[`OrganisationUnits matches snapshot with custom title 1`] = `
<DocumentFragment>
  <div
    class="organisation-units sds--text-field "
  >
    <label>
      Unit name
    </label>
    <div
      class="input-field first"
    >
      <div
        class="inner-input-field"
      >
        <input
          class="sds--text-field--input"
          type="text"
          value=""
        />
        <div
          class="input-field-link input-field-delete"
        >
          <a
            href="#"
          >
            <svg>
              bin.svg
            </svg>
          </a>
        </div>
      </div>
    </div>
    <div
      class="input-field "
    >
      <div
        class="inner-input-field"
      >
        <input
          class="sds--text-field--input"
          type="text"
          value=""
        />
        <div
          class="input-field-link input-field-delete"
        >
          <a
            href="#"
          >
            <svg>
              bin.svg
            </svg>
          </a>
        </div>
      </div>
    </div>
    <a
      class="add-unit"
      href="#"
    >
      + Add unit
    </a>
  </div>
</DocumentFragment>
`;

exports[`OrganisationUnits matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="organisation-units sds--text-field "
  >
    <label>
      Unit name
    </label>
    <div
      class="input-field first"
    >
      <div
        class="inner-input-field"
      >
        <input
          class="sds--text-field--input"
          type="text"
          value=""
        />
        <div
          class="input-field-link input-field-delete"
        >
          <a
            href="#"
          >
            <svg>
              bin.svg
            </svg>
          </a>
        </div>
      </div>
    </div>
    <div
      class="input-field "
    >
      <div
        class="inner-input-field"
      >
        <input
          class="sds--text-field--input"
          type="text"
          value=""
        />
        <div
          class="input-field-link input-field-delete"
        >
          <a
            href="#"
          >
            <svg>
              bin.svg
            </svg>
          </a>
        </div>
      </div>
    </div>
    <a
      class="add-unit"
      href="#"
    >
      + Add unit
    </a>
  </div>
</DocumentFragment>
`;
